Atualização da documentação

--- a/site/public/PaginaInicial/home.html
+++ b/site/public/PaginaInicial/home.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Inicial | TLOUHub</title>
+    <link rel="icon" type="image/x-icon" href="../fonts/logo.png" />
     <link rel="stylesheet" href="./home.css">
     <link rel="stylesheet" href="tlou1.css">
     <link rel="stylesheet" href="tlou2.css">
