--- a/site/public/PaginaTLOU1/tlou1.html
+++ b/site/public/PaginaTLOU1/tlou1.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./tlou1headerfixa.css">
     <link rel="stylesheet" href="tlou1header.css">
     <link rel="stylesheet" href="mediaquerys.css">
+    <link rel="icon" type="image/x-icon" href="../fonts/logo.png" />
     <script src="../js/funcoes.js"></script>
     <link rel="stylesheet" href="../PaginaTLOULB/menuflutuante.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -171,7 +172,7 @@
             </div>
 
             <div class="conhecaMaisCordyceps">
-                <span id="tituloCordyceps">ENTENDA MELHOR O FUNGO <span id="cordycepsCor">CORDYCEPS:</span></span>
+                <span id="tituloCordyceps">NOS CONTE QUAL SEU PERSONAGEM FAVORITO <span id="cordycepsCor">AQUI:</span></span>
                 <span id="cordycepsGradiente"></span>
                 <span id="cordycepsConhece"></span>
             </div>
@@ -200,6 +201,26 @@
         <div class="carrossel">
             <span class="material-symbols-outlined" id="episodioVoltar">arrow_back_ios</span>
             <span class="material-symbols-outlined" id="episodioProceder">arrow_back_ios</span>
+            <span class="material-symbols-outlined" id="episodioVoltar">arrow_back_ios</span>
+            <span class="material-symbols-outlined" id="episodioProceder">arrow_back_ios</span>
+            <div class="carrosselPersonagem">
+                <div class="personagemTipo">
+                    <span id="personagemTitulo">PROTAGONISTA</span>
+                    <span id="personagemTexto">ELLIE WILLIAMS</span>
+                </div>
+
+                <div class="personagemDescricao">
+                    <span id="personagemConteudo">Ellie Williams é uma das personagens principais da franquia de jogos
+                        eletrônicos "The Last of Us", desenvolvida pela Naughty Dog. Ela é introduzida no primeiro
+                        jogo como uma adolescente de 14 anos que vive em um mundo pós-apocalíptico onde a maioria da
+                        população foi transformada em zumbis canibais conhecidos como infectados.
+                         Ellie é uma personagem complexa e interessante, com uma história de vida
+                        difícil. Ela é inteligente, corajosa e astuta, e se mostra capaz de sobreviver em um mundo
+                        extremamente perigoso. Durante o jogo, ela e Joel, o outro personagem principal, desenvolvem
+                        um forte vínculo emocional, enfrentando juntos diversos desafios e perigos.
+                    </span>
+                </div>
+            </div>
 
             <div class="carrosselPersonagem">
                 <div class="personagemTipo">
@@ -243,12 +264,12 @@
 
         <div class="quiz">
             <span id="parteCimaQuiz">
-                <span id="tituloQuiz">QUIZ TLOU</span>
+                <span id="tituloQuiz">PESQUISA TLOU</span>
                 <span id="botaoGeral">VER PERSONAGENS FAVORITOS</span>
             </span>
             <div class="blurQuiz">
-                <span id="blurAviso">PARA ACESSAR O QUIZ SOBRE TLOU</span>
-                <span id="blurBotao">ENTRE</span>
+                <span id="blurAviso">PARA ACESSAR A PESQUISA SOBRE TLOU</span>
+                <span id="blurBotao">ENTRE NO SITE</span>
             </div>
             <div class="conteudoQuiz" id="conteudoDoQuiz">
                 <span id="perguntaQuiz">QUAL SEU PERSONAGEM FAVORITO DE THE LAST OF US 1?</span>
