--- a/site/public/PaginaTLOU2/tlou2.html
+++ b/site/public/PaginaTLOU2/tlou2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Document</title>
-    <link rel="stylesheet" href="left.css">
+    <link rel="stylesheet" href="tlou2.css">
     <link rel="stylesheet" href="mediaquerys.css">
     <link rel="stylesheet" href="./menuflutuante.css">
     <link rel="icon" type="image/x-icon" href="../fonts/logo.png" />
@@ -93,7 +93,7 @@
 
     <div class="tituloJogo">
         <span id="numeroJogo">BEM-VINDO À</span>
-        <span id="nomeJogo">THE LAST OF US: LEFT BEHIND</span>
+        <span id="nomeJogo">THE LAST OF US: PART II</span>
         <span class="material-symbols-outlined" id="expandirIcon">expand_more</span>
     </div>
     </div>
@@ -104,10 +104,11 @@
             <div class="historiaImagem"></div>
             <div class="historiaTexto">
                 <span id="historiaTitulo">HISTÓRIA</span>
-                <span id="historiaSobre">The Last of Us Left Behind é um DLC do jogo The Last of Us, que se passa antes dos eventos principais do jogo e expande a história da personagem Ellie.
-                    A história começa com Ellie cuidando de Joel, que está gravemente ferido. Enquanto procura por suprimentos em um shopping center abandonado, Ellie se lembra de um momento em sua vida antes do encontro com Joel. Ela se lembra de sua amiga Riley, com quem ela havia se separado após uma briga.
-                    Ellie então descobre que Riley ainda está viva e está esperando por ela no mesmo shopping center. As duas se encontram e exploram o shopping juntas, relembrando suas memórias juntas. No entanto, Ellie descobre que Riley foi mordida por um infectado e que em breve se transformará em uma.
-                    As duas passam suas últimas horas juntas, tentando encontrar uma cura para a mordida de Riley e confrontando a possibilidade de perderem uma à outra. A história termina com Ellie voltando para Joel, mais forte e determinada a lutar pela sobrevivência de ambos.</span>
+                <span id="historiaSobre">Durante a jornada de Ellie, ela se envolve em um evento traumático que desencadeia uma busca por justiça. Ela embarca em uma jornada emocional e física pela cidade de Seattle, encontrando diferentes facções de sobreviventes e confrontando os desafios de um mundo hostil e implacável.
+
+                    Ao longo da história, o jogador também assume o controle de Abby, uma nova personagem com sua própria jornada e motivações. A perspectiva alternada entre Ellie e Abby permite uma compreensão mais profunda dos eventos e dos personagens envolvidos, ampliando a narrativa do jogo.
+                    
+                    The Last of Us Part 2 explora temas como vingança, empatia e as consequências das ações de cada personagem. A história é repleta de reviravoltas emocionantes, revelações surpreendentes e dilemas morais complexos, proporcionando uma experiência envolvente e impactante para os jogadores.</span>
             </div>
         </div>
 
@@ -140,10 +141,10 @@
 
         <div class="pqExpansao">
             <span id="expansaoTextos">
-                <span id="expansaoTitulo">O PORQUÊ DE UMA EXPANSÃO?</span>
-                <span id="expansaoConteudo">Uma das principais razões para a criação da DLC The Last of Us Left Behind foi a popularidade da personagem Ellie entre os jogadores. Os desenvolvedores da Naughty Dog queriam explorar mais a fundo a história de Ellie e aprofundar sua personalidade, oferecendo uma experiência mais completa e emocionante.
-                    Além disso, a equipe de desenvolvimento queria expandir ainda mais o universo de The Last of Us e dar aos jogadores mais oportunidades de mergulhar nesse mundo pós-apocalíptico. A DLC também permitiu que a Naughty Dog experimentasse com novos elementos de jogabilidade, tornando a experiência de jogo ainda mais interessante e envolvente.
-                    Outra razão para a criação da DLC foi oferecer aos jogadores mais conteúdo para jogar e prolongar a vida útil do jogo. A The Last of Us foi um grande sucesso e a Naughty Dog queria continuar a cativar os jogadores com novas histórias e aventuras dentro do universo da franquia.</span>
+                <span id="expansaoTitulo">UMA HISTÓRIA DE DOIS LADOS</span>
+                <span id="expansaoConteudo">The Last of Us Part 2 é conhecido por apresentar uma história de dois lados, oferecendo perspectivas diferentes e complexas para os jogadores. A narrativa não se concentra apenas em um único protagonista, mas permite que o jogador controle tanto Ellie quanto Abby, duas personagens com motivações e jornadas distintas.
+                    Essa abordagem de contar a história de diferentes pontos de vista enriquece a narrativa e proporciona uma compreensão mais ampla dos eventos. Ao jogar com Ellie e Abby, o jogador tem a oportunidade de conhecer suas histórias individuais, entender suas motivações e desenvolver empatia por cada uma delas.
+                    A história de dois lados de The Last of Us Part 2 desafia as percepções preconcebidas do jogador e provoca reflexões sobre a natureza da vingança, moralidade e empatia. À medida que a história se desenrola, os jogadores são confrontados com dilemas morais complexos e são convidados a questionar suas próprias noções de certo e errado.</span>
             </span>
 
             <span id="expansaoImagem"></span>
@@ -160,14 +161,10 @@
             </div>
 
             <div class="personagemDescricao">
-                <span id="descricao1">Ellie Williams é uma das personagens principais da franquia de jogos
-                    eletrônicos "The Last of Us", desenvolvida pela Naughty Dog. Ela é introduzida no primeiro
-                    jogo como uma adolescente de 14 anos que vive em um mundo pós-apocalíptico onde a maioria da
-                    população foi transformada em zumbis canibais conhecidos como infectados.</span>
-                <span id="descricao2"> Ellie é uma personagem complexa e interessante, com uma história de vida
-                    difícil. Ela é inteligente, corajosa e astuta, e se mostra capaz de sobreviver em um mundo
-                    extremamente perigoso. Durante o jogo, ela e Joel, o outro personagem principal, desenvolvem
-                    um forte vínculo emocional, enfrentando juntos diversos desafios e perigos.</span>
+                <span id="descricao1">Ellie, a protagonista de The Last of Us Part 2, é uma personagem complexa e cativante. Ela é uma jovem corajosa e habilidosa, que se envolve em uma jornada de vingança após um evento traumático. Ao longo do jogo, testemunhamos sua transformação, tanto física quanto emocionalmente.
+
+                    Ellie é uma personagem multifacetada, que combina força e vulnerabilidade. Ela enfrenta desafios físicos e morais, lutando contra infectados e outros sobreviventes hostis. Sua determinação inabalável e inteligência estratégica são suas principais armas nessa luta pela justiça.</span>
+                <span id="descricao2"> Além de suas habilidades de combate, Ellie é movida por relacionamentos significativos. Ela desenvolve laços profundos com outros personagens, forjando amizades e vínculos românticos. Esses relacionamentos desempenham um papel crucial em sua jornada, moldando suas escolhas e influenciando seu crescimento como pessoa.</span>
             </div>
         </div>
         <div class="carrosselPersonagem">
@@ -194,14 +191,16 @@
         <div class="container">
             <div class="voceTexto">
                 <span id="voceTitulo">VOCÊ SABIA QUE:</span>
-                <span id="voceConteudo">The Last of Us: Left Behind foi o primeiro conteúdo de história adicional (DLC) criado pela Naughty Dog. O DLC foi lançado em 2014 e serviu como uma prequela para o jogo original, seguindo a história de Ellie antes dos eventos principais do jogo. Uma das características mais marcantes do Left Behind é que ele permite que os jogadores alternem entre dois períodos diferentes da vida de Ellie: sua amizade com Riley, antes da infecção, e um momento em que ela está sozinha em um shopping center após os eventos do jogo principal. O DLC também adicionou novas mecânicas de jogo, como a capacidade de se esconder em meio a multidões de infectados, o que adicionou uma nova camada de estratégia e tensão ao jogo.</span>
+                <span id="voceConteudo">The Last of Us Part 2 é que o jogo apresenta uma notável atenção aos detalhes e à autenticidade. A equipe de desenvolvimento da Naughty Dog buscou trazer uma experiência imersiva ao reproduzir fielmente locais reais de Seattle, onde grande parte do jogo se passa.
+                    Para alcançar esse nível de autenticidade, os desenvolvedores realizaram pesquisas extensas e capturaram imagens e áudios dos locais reais. Eles visitaram Seattle, tiraram fotos, gravaram sons ambientes e até mesmo utilizaram drones para capturar imagens aéreas precisas.
+                    Essa dedicação aos detalhes permitiu que a equipe recriasse com precisão muitos pontos turísticos e marcos emblemáticos de Seattle no jogo, como o Teatro Paramount e o Mercado Pike Place. Esses esforços garantem uma sensação de realismo e familiaridade aos jogadores que conhecem a cidade, além de adicionar um toque autêntico à experiência para todos os jogadores.</span>
             </div>
 
             <div class="saibaMais">
                 <span id="saibaMaisTitulo">SAIBA MAIS SOBRE:</span>
                 <div class="saibaConteudo">
                     <span id="saibaGradiente">
-                        <span id="saibaTexto">THE LAST OF US: PART II</span>
+                        <span id="saibaTexto">THE LAST OF US: HBO</span>
                     </span>
                     <span id="saibaImagem"></span>
                 </div>
@@ -226,4 +225,4 @@
 
 </body>
 </html>
-<script src="./left.js"></script>
+<script src="./tlou2.js"></script>
