--- a/site/public/PaginaTLOUHBO/hbo.html
+++ b/site/public/PaginaTLOUHBO/hbo.html
@@ -8,6 +8,7 @@
     <script src="../js/funcoes.js"></script>
     <link rel="stylesheet" href="./mediaquerys.css">
     <link rel="stylesheet" href="../PaginaTLOULB/menuflutuante.css">
+    <link rel="icon" type="image/x-icon" href="../fonts/logo.png"/>
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Document</title>
@@ -276,31 +277,7 @@
     <div class="ranking">
         <span id="tituloRanking">RANKING DE EPISÓDIOS (LIKES)</span>
         <div class="rankingConteudo">
-            <div class="rankingPosicao">
-                <span id="posicao">1°</span>
-                <span id="imagemPosicao"></span>
-                <span id="textoPosicao">EPISÓDIO 1</span>
-            </div>
-            <div class="rankingPosicao">
-                <span id="posicao">1°</span>
-                <span id="imagemPosicao"></span>
-                <span id="textoPosicao">EPISÓDIO 1</span>
-            </div>
-            <div class="rankingPosicao">
-                <span id="posicao">1°</span>
-                <span id="imagemPosicao"></span>
-                <span id="textoPosicao">EPISÓDIO 1</span>
-            </div>
-            <div class="rankingPosicao">
-                <span id="posicao">1°</span>
-                <span id="imagemPosicao"></span>
-                <span id="textoPosicao">EPISÓDIO 1</span>
-            </div>
-            <div class="rankingPosicao">
-                <span id="posicao">1°</span>
-                <span id="imagemPosicao"></span>
-                <span id="textoPosicao">EPISÓDIO 1</span>
-            </div>
+            <canvas id="grafico_ranking"></canvas>
         </div>
     </div>
      <!-- FOOTER-->
@@ -312,4 +289,5 @@
  
 </body>
 </html>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="./hbo.js"></script>
