--- a/site/public/PaginaTLOUHBO/hbo.html
+++ b/site/public/PaginaTLOUHBO/hbo.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/x-icon" href="../fonts/logo.png"/>
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>Document</title>
+    <title>The Last of Us: HBO | TLOUHub</title>
 </head>
 <body>
     <div class="TLOUGradiente"></div>
