Simplificação do código do QUIZ

--- a/site/public/PaginaInicial/home.html
+++ b/site/public/PaginaInicial/home.html
@@ -324,15 +324,8 @@
 
     <div class="containerTLOUinformativoTLOUHBO">
         <span id="tituloInformativoTLOUHBO">O QUE VOCÊ PRECISA SABER?</span>
-        <span id="textoInformativo1TLOUHBO">Conheça a história emocionante e os personagens inesquecíveis de The Last of
-            U
-            Part II™, vencedor de mais de 300 prêmios e o prêmio de Jogo do Ano 2021.</span>
-        <span id="textoInformativo2TLOUHBO">Cinco anos depois da jornada perigosa pelos Estados Unidos pós-pandêmicos,
-            Ellie e Joel se estabelecem em Jackson, Wyoming. A vida em uma próspera comunidade de sobreviventes lhes
-            trouxe paz e estabilidade, apesar da ameaça constante dos infectados e de outros sobreviventes mais
-            desesperados. Quando um evento violento interrompe essa paz, Ellie embarca em uma jornada implacável para
-            fazer justiça e encontrar uma solução. Enquanto vai atrás de cada um dos responsáveis, ela se confronta com
-            as repercussões físicas e emocionais devastadoras de suas ações.</span>
+        <span id="textoInformativo1TLOUHBO">The Last of Us é uma série de televisão pós-apocalíptica americana criada por Craig Mazin e Neil Druckmann para a HBO.</span>
+        <span id="textoInformativo2TLOUHBO">Baseado no videogame de 2013 desenvolvido pela Naughty Dog, a série se passa em 2023, vinte anos após uma pandemia causada por uma infecção fúngica em massa, que faz com que seus hospedeiros se transformem em criaturas semelhantes a zumbis e destruam a sociedade. A série segue Joel (Pedro Pascal), um contrabandista encarregado de escoltar a adolescente imune Ellie (Bella Ramsey) através de um Estados Unidos pós-apocalíptico.</span>
 
 
         <div class="parteBaixo">
