--- a/site/public/PaginaTLOU1/tlou1.html
+++ b/site/public/PaginaTLOU1/tlou1.html
@@ -139,17 +139,8 @@
         <div class="blocoHistoria"></div>
         <span id="blocoHistoriaTexto">
             <span id="tituloHistoria">HISTÓRIA</span>
-            <span id="conteudoHistoria1">Conheça a história emocionante e os personagens inesquecíveis de The Last
-                of Us™, vencedor de mais de 200 prêmios de Jogo do Ano.</span>
-            <span id="conteudoHistoria2">
-                Conheça a história emocionante e os personagens inesquecíveis de The Last of Us™, vencedor de mais
-                de 200 prêmios de Jogo do Ano.
-
-                Em uma civilização devastada, em que infectados e sobreviventes veteranos estão à solta, Joel, um
-                protagonista abatido, é contratado para tirar uma garota de 14 anos, Ellie, de uma zona de
-                quarentena militar. No entanto, o que começa como um pequeno serviço se transforma em uma jornada
-                brutal através do país.
-            </span>
+            <span id="conteudoHistoria1">A história se passa em 2033, vinte anos depois de uma pandemia que transformou grande parte da população em criaturas violentas conhecidas como infectados. Joel, um contrabandista endurecido pela tragédia, é contratado para transportar Ellie, uma garota de 14 anos imune ao fungo responsável pela infecção, para um grupo de resistência conhecido como os Vagalumes.</span>
+            <span id="conteudoHistoria2">Ao longo da jornada, Joel e Ellie enfrentam perigos constantes, incluindo infectados e outros sobreviventes hostis. A relação entre eles se desenvolve gradualmente, passando de desconfiança mútua para um vínculo de afeto paternal. Ellie, apesar de sua juventude, mostra-se corajosa e determinada, enquanto Joel luta para encontrar um propósito e se abrir para a possibilidade de conexão humana novamente.</span>
         </span>
 
 
