--- a/site/public/PaginaTLOUHBO/hbo.html
+++ b/site/public/PaginaTLOUHBO/hbo.html
@@ -264,9 +264,9 @@
         <div id="jsonEpisodiosImagem"></div>
         <div id="jsonEpisodiosTextos">
             <span id="jsonEpisodioTitulo">THE LAST OF US: EPISÓDIO 1</span>
-            <span id="jsonEpisodioResumo">O fungo Cordyceps é um gênero de fungos que infecta insetos e outros artrópodes. O fungo infecta seu hospedeiro através de esporos que entram no corpo do inseto e começam a crescer e se espalhar, eventualmente matando-o.
-                O Cordyceps inspirou a criação do universo de The Last of Us, no qual uma mutação do fungo infecta humanos e transforma-os em criaturas violentas e perigosas. No jogo, o fungo é altamente contagioso e pode ser transmitido através de esporos que se espalham pelo ar, tornando-o extremamente perigoso para a população humana.
-                Ele é fascinante por sua capacidade de infectar e controlar a mente de seu hospedeiro, alterando seu comportamento para atender aos interesses do fungo. Embora a versão fictícia do fungo em The Last of Us seja altamente exagerada e perigosa, a inspiração biológica por trás do fungo é um exemplo interessante de como a natureza pode inspirar a ficção científica.</span>
+            <span id="jsonEpisodioResumo">O primeiro episódio de The Last of Us nos apresenta o mundo da série, um Estados Unidos pós-apocalíptico onde um fungo infectou a população, transformando-a em criaturas carnívoras. Conhecemos Joel Miller (Pedro Pascal), um contrabandista encarregado de escoltar uma garota de 14 anos chamada Ellie (Bella Ramsey) pelo país. Ellie é imune à infecção, e os Fireflies, um grupo rebelde, acreditam que ela pode ser a chave para encontrar a cura.
+                O primeiro episódio de The Last of Us nos apresenta o mundo da série, um Estados Unidos pós-apocalíptico onde um fungo infectou a população, transformando-a em criaturas carnívoras. Conhecemos Joel Miller (Pedro Pascal), um contrabandista encarregado de escoltar uma garota de 14 anos chamada Ellie (Bella Ramsey) pelo país. Ellie é imune à infecção, e os Fireflies, um grupo rebelde, acreditam que ela pode ser a chave para encontrar a cura.
+            </span>
         </div>
         <div class="curtida">
             <span class="material-symbols-outlined" id="curtidaIcon">favorite</span>
